--- a/docs/faststore/docs/headless-cms/managing-content-with-scopes-and-requiredscopes.mdx
+++ b/docs/faststore/docs/headless-cms/managing-content-with-scopes-and-requiredscopes.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Managing content with ‘scopes’ and ‘requiredScopes’"
+title: "Managing content with 'scopes' and 'requiredScopes'"
 slug: "managing-content-with-scopes-and-requiredscopes"
 hidden: false
 createdAt: "2024-07-29T14:00:15.623Z"
